variables.Variables.scala.error
Erreur de compilation :
Variables:4: error: not found: value nbPas
  nbPas=nbpas+1;
  ^Variables:11: error: not found: value nbPas
while(nbPas!=dejaFait) {
      ^