variables.Variables.scala.code
var nbpas:Int = 0;
while (estSurBiscuit==false) {
  avance();
  nbPas=nbpas+1;
}

porteBiscuit();
var dejaFait:Int=0;


while(nbPas!=dejaFait) {
  recule();
  dejaFait=dejaFait+1;
}

poseBiscuit;

